--- a/puctesis_ejemplo.tex
+++ b/puctesis_ejemplo.tex
@@ -362,6 +362,19 @@ The style file, \,\verb+puctesis.sty,+\, and the document class \,\verb+puctesis
 
 \chapter{INTRODUCCIÓN}
 
+Trabajos recientes muestran que los líderes cumplen un rol importante afectando el crecimiento económico de los países (Besley et al., 2011; Jones y Olken, 2005). Además, un número creciente de estudios teóricos y empíricos sugieren que la calidad de las políticas es afectada por las características de los líderes que las implementan. La mayoría de estos estudios se ha centrado en características tales como el sexo (Gagliarducci y Paserman, 2011; Washington, 2008), la educación (Brollo y Troiano, 2014; Besley et al., 2011), o la edad (Alesina et al., 2015).
+
+¿Qué factores influyen en el desarrollo económico de los países? La literatura sobre crecimiento y desarrollo económico se ha enfocado tradicionalmente en factores característicos del país y políticas económicas mantenidas en el tiempo, tales como expectativas de vida y escolaridad, menor tasa de fertilidad, baja inflación, bajo gasto de gobierno, entre otros \cite{barro1996determinants}. 
+	
+Sin embargo, el diseño institucional, incluso en las democracias más avanzadas, a menudo facilita que presidentes y primeros ministros puedan dejar una impronta personal en decisiones y políticas de estado, y así influir significativamente en el progreso económico del país. En efecto, investigaciones recientes muestran que los líderes nacionales cumplen un rol importante afectando el crecimiento económico de sus países \cite{jones2004leaders,besley2011educated, besley2010political}. Esta  evidencia motiva la examinación de otras variables macroeconómicas que podrían ser directamente afectadas por las políticas implementadas por los líderes. 
+
+Un candidato ideal a considerar para tal estudio es el comercio internacional de un país, que se relaciona con variables macroeconómicas tales como importaciones, exportaciones e inversión extranjera directa (FDI, por \textit{Foreign Direct Investment} en inglés). Históricamente se ha sostenido la idea de que economías más abiertas al intercambio comercial tienen mejor desempeño económico \cite{Dollar2004, berg2003trade}. FDI también afecta positivamente el crecimiento \cite{Azman-Saini2010, Borensztein1998}.
+
+Diversos estudios sugieren que un grupo más amplio de características pueden afectar el desempeño de los jefes de estado y la forma en que estos toman decisiones. Características relativas al medio socioeconómico de la persona durante su infancia pueden influir en los logros alcanzados en su vida. Por ejemplo, Carneiro y Heckman (2002, 2003) muestran que el crecer en una familia acomodada es el factor más importante que explica el ingreso a la universidad. Además, existe evidencia que características relativas a la trayectoria y experiencia profesional afectan al desempeño de los líderes. Trabajos como (Gehlcach et al., 2010; Diermeier et al., 2005) sugieren que empresarios y ejecutivos que llegan ocupar un cargo político tienen un mejor desempeño que políticos de profesión. Otros  trabajos estudian el efecto en el desempeño de líderes con experiencia militar previa (Bernmelech y Frydan, 2014). Por último, un amplio conjunto de resultados muestran una relación entre características relativas a la personalidad y factores tales como orientación política (Gerber et al., 2010, 2011), comportamiento de congresistas (Crichlow, 2002; Dietrich et al, 2012; Ramey et al. 2014) y preferencias de política exterior (Schoen, 2007).
+
+
+
+
            %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
            %   CAPITULO 2
            %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -408,6 +421,9 @@ Individuos extrovertidos son percibidos como enérgicos, amigables y asertivos. O
 \subsection{Personalidad y comportamiento en política}
 Numerosos estudios señalan la importancia de variadas características psicológicas en el comportamiento de políticos. Se ha mostrado la influencia de rasgos psicológicos en la toma de decisiones relativas a relaciones internacionales (Young and Schafer 1998). La capacidad de un líder para confiar en otros se ha relacionado con su voluntad para realizar compromisos internacionales (Herman 1980). A su vez, las motivaciones personales de los líderes, tales como sus ansias de poder o de influencia, se han relacionado con el nivel de agresividad y la toma de riesgos (A REVISAR!!! Winter, 1973, 1993 ;Winter and Sturart, 1977), e incluso con la probabilidad de entrar en guerra (Winter 1987). Tanto Carney et al.(2008) como Gerber et al. (2010c) encuentran correlaciones significativas entre dos de los Cinco Grandes y  orientación política: ser conservador está asociado con mayores niveles de responsabilidad, mientras que ser liberal está positivamente correlacionado con apertura al cambio. 
 \subsection{Los Cinco Grandes e intercambio comercial}
+Numerosos estudios indican que las características psicológicas 
+
+
 La evidencia muestra que los Tratados de Libre Comercio (TLC) producen un incremento en el intercambio comercial entre los países que lo suscriben \cite{Baier2007,Baier2009}. 
 
 \citeA{Crichlow2002}  estudia el efecto de ciertos atributos de personalidad de legisladores en Estados Unidos sobre temas de cooperación internacional. Específicamente estudia el apoyo hacia medidas que buscan reducir las barreras al comercio internacional. Encuentra efectos significativos incluso después de controlar por partido e ideología del legislador.
@@ -418,12 +434,17 @@ Proteccionismo y seguridad, riesgo \cite{Johnston2013}
 
 By and large, personality affects foreign policy opinions roughly as strongly as traditional factors such as partisan- ship, ideology, and social background \cite{Schoen2007}. Among the traits studied, agreeableness and open- ness render persons more supportive of international cooperation and more skeptical of the use of military force, whereas conscientiousness exhibits reverse effects.
 
+Determinants of FDI flows: political risks \cite{Schneider1985,Busse2007}
+Negative effect of tax \cite{Loree1995}
+Positive effect of tariff, business conditions, attitude towards foreign investors \cite{singh1995some}
+
+
 \subsubsection{Extraversión}
 Se han encontrado correlaciones entre el factor extraversión y el volumen de la región del cerebro involucrada en el procesamiento de recompensas a estímulos \cite{DeYoung2010}.
 
 Existe amplia evidencia de la correlación entre optimismo y extraversión \cite{Sharpe2011}.
 
-También existe evidencia que sugiere que individuos más extrovertidos tienen expectativas de éxito más altas y estables en determinados desafíos \cite{Pearce-McCall1986}.
+También existe evidencia que sugiere que individuos más extrovertidos tienen expectativas de éxito más altas y estables en pruebas donde el resultado es incierto \cite{Pearce-McCall1986}.
 
 En \cite{Etheredge} se argumenta que líderes más extrovertidos son más proclives a defender y adoptar políticas de cooperación en el ámbito internacional. Líderes extrovertidos con alta predominancia son caracterizados como integradores y conciliadores, mientras que líderes más introvertidos son caracterizados como excluyentes y veladores del \textit{status quo}.
 
@@ -432,6 +453,11 @@ Riesgo de impacto ambiental de TLC \cite{Grossman1991}
 TLC aumenta FDI \cite{Buthe2015}
 
 Basados en esta evidencia, conjeturamos que líderes más extrovertidos
+
+\subsubsection{Responsabilidad}
+Se asocia la responsabilidad con un menor descuento de pagos futuros. ``Sacrificios ahora por recompensas en el futuro'' \cite{Daly2009}.
+
+Entre los Cinco Grandes, el factor responsabilidad ha sido el más consistente y significativo predictor de desempeño laboral, en múltiples trabajos \cite{Behling1998,Dudley2006,Hurtz2000}. 
 
            %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
            %   CAPITULO 2
