--- a/puctesis_refs.bib
+++ b/puctesis_refs.bib
@@ -939,5 +939,183 @@
 	volume = {51},
 	year = {2007}
 }
+@article{Daly2009,
+	abstract = {This paper considers the relationship between the economic concept of time preference and relevant concepts from psychology and biology. Using novel data from a time diary study conducted in Ireland that combined detailed psychometric testing with medical testing and real-time bio-tracking, we examine the extent to which individual differences in financial discounting are related to underlying biological and psychological differences. The paper finds that financial discounting is related to a range of psychological variables including consideration of future consequences, self-control, conscientiousness, extraversion, and experiential avoidance, as well as being predicted by heart rate variability and blood pressure. (JEL: D01, D9, C81)},
+	author = {Daly, M and Harmon, C P and Delaney, L},
+	doi = {10.1162/JEEA.2009.7.2-3.659},
+	file = {:C$\backslash$:/Users/Roberto/Google Drive/Memoria/Documentos/Papers/Personality/time{\_}preference.pdf:pdf},
+	isbn = {1542-4766},
+	issn = {1542-4766},
+	journal = {Journal of the European Economic Association},
+	keywords = {emotion regulation,future,immediate,outcomes,rewards},
+	mendeley-groups = {Personality},
+	number = {2-3},
+	pages = {659--669},
+	title = {{Psychological and Biological Foundations of Time Preference}},
+	url = {<Go to ISI>://000265366000031},
+	volume = {7},
+	year = {2009}
+}
 
-
+@article{Dudley2006,
+	abstract = {Researchers of broad and narrow traits have debated whether narrow traits are important to consider in the prediction of job performance. Because personality-performance relationship meta-analyses have focused almost exclusively on the Big Five, the predictive power of narrow traits has not been adequately examined. In this study, the authors address this question by meta-analytically examining the degree to which the narrow traits of conscientiousness predict above and beyond global conscientiousness. Results suggest that narrow traits do incrementally predict performance above and beyond global conscientiousness, yet the degree to which they contribute depends on the particular performance criterion and occupation in question. Overall, the results of this study suggest that there are benefits to considering the narrow traits of conscientiousness in the prediction of performance.},
+	author = {Dudley, Nicole M and Orvis, Karin a and Lebiecki, Justin E and Cortina, Jos{\'{e}} M},
+	doi = {10.1037/0021-9010.91.1.40},
+	file = {:C$\backslash$:/Users/Roberto/Google Drive/Memoria/Documentos/Papers/Personality/job1.pdf:pdf},
+	isbn = {0021-9010},
+	issn = {0021-9010},
+	journal = {The Journal of applied psychology},
+	keywords = {Attitude,Employment,Forecasting,Humans,Occupations,Personality,Questionnaires,Reproducibility of Results,Social Responsibility},
+	mendeley-groups = {Personality},
+	number = {1},
+	pages = {40--57},
+	pmid = {16435937},
+	title = {{A meta-analytic investigation of conscientiousness in the prediction of job performance: examining the intercorrelations and the incremental validity of narrow traits.}},
+	url = {http://www.ncbi.nlm.nih.gov/pubmed/16435937},
+	volume = {91},
+	year = {2006}
+}
+@article{Hurtz2000,
+	abstract = {Prior meta-analyses investigating the relation between the Big 5 personality dimensions and job performance have all contained a threat to construct validity, in that much of the data included within these analyses was not derived from actual Big 5 measures. In addition, these reviews did not address the relations between the Big 5 and contextual performance. Therefore, the present study sought to provide a meta-analytic estimate of the criterion-related validity of explicit Big 5 measures for predicting job performance and contextual performance. The results for job performance closely paralleled 2 of the previous meta-analyses, whereas analyses with contextual performance showed more complex relations among the Big 5 and performance. A more critical interpretation of the Big 5-performance relationship is presented, and suggestions for future research aimed at enhancing the validity of personality predictors are provided.},
+	author = {Hurtz, G M and Donovan, J J},
+	doi = {10.1037/0021-9010.85.6.869},
+	file = {:C$\backslash$:/Users/Roberto/Google Drive/Memoria/Documentos/Papers/Personality/job2.pdf:pdf},
+	isbn = {0021-9010 VNOvid Technologies DBJournals@Ovid},
+	issn = {0021-9010},
+	journal = {The Journal of applied psychology},
+	mendeley-groups = {Personality},
+	number = {6},
+	pages = {869--879},
+	pmid = {11125652},
+	title = {{Personality and job performance: the Big Five revisited.}},
+	volume = {85},
+	year = {2000}
+}
+@article{Behling1998,
+	abstract = {Despite years of research designed to match jobs and people, selection decisions are not always based on an exact fit between the person and the job. Microsoft values intelligence over all else, for all jobs. Southwest Airlines values character. When are these general characteristics adequate to the task of selecting job candidates? Should firms value intelligence and conscientiousness above specific skills?},
+	author = {Behling, Orlando},
+	doi = {10.5465/AME.1998.254980},
+	file = {:C$\backslash$:/Users/Roberto/Google Drive/Memoria/Documentos/Papers/Personality/emplyee selection.pdf:pdf},
+	isbn = {10795545},
+	issn = {1558-9080},
+	journal = {The Academy of Management Executive (1993-2005)},
+	mendeley-groups = {Personality},
+	number = {1},
+	pages = {77--86},
+	pmid = {254980},
+	title = {{Employee selection: Will intelligence and conscientiousness do the Job?}},
+	url = {http://www.jstor.org/stable/4165443},
+	volume = {12},
+	year = {1998}
+}
+@article{Schneider1985,
+	abstract = {Four models explaining the flow of foreign direct investment in 80 less developed countries are econometrically estimated and compared by ex post forecasts. A politico-economic model which simultaneously includes economic and political determinants performs best. The higher the real per capita GNP and the lower the balance of payments deficit are, the more foreign direct investment is attracted. Among the political determinants the amount of bilateral aid coming from Western countries and multilateral aid has a stimulating effect, while help from communist countries has a negative effect. Political instability significantly reduces the inflow of foreign direct investment.},
+	author = {Schneider, Friedrich and Frey, Bruno S},
+	doi = {10.1016/0305-750X(85)90002-6},
+	issn = {0305750X},
+	journal = {World Development},
+	mendeley-groups = {Economic growth},
+	month = {feb},
+	number = {2},
+	pages = {161--175},
+	title = {{Economic and political determinants of foreign direct investment}},
+	url = {http://www.sciencedirect.com/science/article/pii/0305750X85900026},
+	volume = {13},
+	year = {1985}
+}
+@article{singh1995some,
+	title={Some new evidence on determinants of foreign direct investment in developing countries},
+	author={Singh, Harinder and Jun, Kwang W},
+	journal={World Bank policy research working paper},
+	number={1531},
+	year={1995}
+}
+@article{Busse2007,
+	abstract = {The paper explores the linkages among political risk, institutions, and foreign direct investment inflows. For a data sample of 83 developing countries covering 1984 to 2003, we identify indicators that matter most for the activities of multinational corporations. The results show that government stability, internal and external conflict, corruption and ethnic tensions, law and order, democratic accountability of government, and quality of bureaucracy are highly significant determinants of foreign investment inflows. © 2006 Elsevier B.V. All rights reserved.},
+	author = {Busse, Matthias and Hefeker, Carsten},
+	doi = {10.1016/j.ejpoleco.2006.02.003},
+	file = {:C$\backslash$:/Users/Roberto/Google Drive/Memoria/Documentos/Papers/Trade/political risks.pdf:pdf},
+	isbn = {0176-2680},
+	issn = {01762680},
+	journal = {European Journal of Political Economy},
+	keywords = {Foreign direct investment,Institutions,Multinational corporations,Political risk},
+	mendeley-groups = {Economic growth},
+	number = {2},
+	pages = {397--415},
+	title = {{Political risk, institutions and foreign direct investment}},
+	volume = {23},
+	year = {2007}
+}
+@article{Loree1995,
+	author = {Loree, David W. and Guisinger, Stephen E.},
+	file = {:C$\backslash$:/Users/Roberto/Google Drive/Memoria/Documentos/Papers/Trade/fdi{\_}tax.pdf:pdf},
+	journal = {Journal of International Business Studies},
+	mendeley-groups = {Economic growth},
+	number = {2},
+	pages = {281--299},
+	title = {{Policy and Non-Policy Determinants of U.S. Equity Foreign Direct Investment}},
+	volume = {26},
+	year = {1995}
+}
+@techreport{barro1996determinants,
+	title={Determinants of economic growth: A cross-country empirical study},
+	author={Barro, Robert J},
+	year={1996},
+	institution={National Bureau of Economic Research}
+}
+@article{Dollar2004,
+	abstract = {A key issue today is the effect of globalisation on inequality and poverty. Well over half the developing world lives in globalising economies that have seen large increases in trade and significant declines in tariffs. They are catching up the rich countries while the rest of the developing world is falling farther behind. Second, we examine the effects on the poor. The increase in growth rates leads on average to proportionate increases in incomes of the poor. The evidence from individual cases and cross-country analysis supports the view that globalisation leads to faster growth and poverty reduction in poor countries.},
+	author = {Dollar, David and Kraay, Aart},
+	doi = {10.1111/j.0013-0133.2004.00186.x},
+	file = {:C$\backslash$:/Users/Roberto/Downloads/Dollar{\_}et{\_}al-2004-The{\_}Economic{\_}Journal.pdf:pdf},
+	isbn = {1468-0297},
+	issn = {0013-0133},
+	journal = {The Economic Journal},
+	mendeley-groups = {Economic growth},
+	number = {493},
+	pages = {F22--F49},
+	title = {{Trade, Growth, and Poverty}},
+	volume = {114},
+	year = {2004}
+}
+@book{berg2003trade,
+	title={Trade, growth, and poverty: A selective survey},
+	author={Berg, Mr Andrew and Krueger, Anne O},
+	number={3-30},
+	year={2003},
+	publisher={International Monetary Fund}
+}
+@article{Azman-Saini2010,
+	abstract = {This study uses a threshold regression model and finds new evidence that the positive impact of FDI on growth "kicks in" only after financial market development exceeds a threshold level. Until then, the benefit of FDI is non-existent. ?? 2009 Elsevier B.V.},
+	author = {Azman-Saini, W. N W and Law, Siong Hook and Ahmad, Abd Halim},
+	doi = {10.1016/j.econlet.2010.01.027},
+	file = {:C$\backslash$:/Users/Roberto/Google Drive/Memoria/Documentos/Papers/Trade/fdi financial markets.pdf:pdf},
+	isbn = {0165-1765},
+	issn = {01651765},
+	journal = {Economics Letters},
+	keywords = {Economic growth,FDI,Financial development,Threshold effects},
+	mendeley-groups = {Economic growth},
+	number = {2},
+	pages = {211--213},
+	publisher = {Elsevier B.V.},
+	title = {{FDI and economic growth: New evidence on the role of financial markets}},
+	url = {http://dx.doi.org/10.1016/j.econlet.2010.01.027},
+	volume = {107},
+	year = {2010}
+}
+@article{Borensztein1998,
+	abstract = {We test the effect of foreign direct investment (FDI) on economic growth in a cross-country regression framework, utilizing data on FDI flows from industrial countries to 69 developing countries over the last two decades. Our results suggest that FDI is an important vehicle for the transfer of technology, contributing relatively more to growth than domestic investment. However, the higher productivity of FDI holds only when the host country has a minimum threshold stock of human capital. Thus, FDI contributes to economic growth only when a sufficient absorptive capability of the advanced technologies is available in the host economy.},
+	author = {Borensztein, E. and {De Gregorio}, J. and Lee, J-W.},
+	doi = {10.1016/S0022-1996(97)00033-0},
+	file = {:C$\backslash$:/Users/Roberto/Google Drive/Memoria/Documentos/Papers/Trade/fdi growth.pdf:pdf},
+	isbn = {0022-1996},
+	issn = {00221996},
+	journal = {Journal of International Economics},
+	keywords = {1 1 202 6234740,1 1 202 6237679,corresponding author,cross-country regression frame-,developing countries,e-mail,eborensztein,economic growth,fax,foreign direct investment,imf,org,tel,work},
+	mendeley-groups = {Economic growth},
+	number = {1},
+	pages = {115--135},
+	title = {{How does foreign direct investment affect economic growth?}},
+	volume = {45},
+	year = {1998}
+}
