STILL FDI EXPORTS IMPORTS

--- a/puctesis_ejemplo.tex
+++ b/puctesis_ejemplo.tex
@@ -362,13 +362,24 @@ The style file, \,\verb+puctesis.sty,+\, and the document class \,\verb+puctesis
 
 \chapter{INTRODUCCIÓN}
 
+Ante la cuestión sobre qué factores influyen en el desarrollo económico de los países, la literatura económica se ha enfocado tradicionalmente en factores característicos del país y políticas económicas mantenidas en el tiempo, tales como expectativas de vida y escolaridad, menor tasa de fertilidad, baja inflación, bajo gasto de gobierno, entre otros \cite{barro1996determinants}. 	
+Pero se puede argumentar que la labor de los líderes al mando de un país es también un factor a considerar. El diseño institucional, incluso en las democracias más avanzadas, a menudo facilita que presidentes y primeros ministros puedan dejar una impronta personal en decisiones y políticas de estado, y así influir significativamente en el progreso económico de las naciones. En efecto, investigaciones recientes muestran que los líderes nacionales cumplen un rol importante afectando el crecimiento económico de sus países \cite{jones2004leaders,besley2011educated, besley2010political}. 
+Estos estudios indican que la alternacia de líderes en el poder induce cambios en el crecimiento del Producto Interno Bruto (PIB) de los países \cite{jones2004leaders} y que la dirección de estos cambios podría ser explicada, en parte, por características personales de los líderes tales como sus estudios \cite{besley2011educated}.
+Esta  evidencia motiva la examinación de otras variables macroeconómicas que podrían ser directamente afectadas por las políticas implementadas por los líderes. 
+
+Un candidato ideal a considerar para tal estudio es el comercio internacional de un país, que engloba un conjunto de variables macroeconómicas, entre las cuales destacan importaciones, exportaciones e inversión extranjera directa (FDI, por \textit{Foreign Direct Investment} en inglés). Históricamente se ha sostenido la idea de que economías más abiertas al intercambio comercial, es  decir que facilitan o promueven flujos de importaciones y exportaciones, tienen mejor desempeño económico \cite{Dollar2004, berg2003trade,Wacziarg2008}. Flujos de FDI también afectan positivamente el crecimiento \cite{Azman-Saini2010, Borensztein1998}. 
+Por lo que sin duda el estudio del desarrollo o crecimiento de  importaciones, exportaciones y flujos de FDI es relevante. 
+
+Por otro lado, generalmente un mandatario tiene la capacidad de implementar políticas que tendrán efectos tangibles y pronosticables en el intercambio comercial. Por ejemplo, los gobiernos pueden aplicar barreras comerciales como aranceles, licencias de importación y exportación, cuotas o subsidios para restringir importaciones. Estas medidas buscan generalmente proteger industrias locales y empleos de la competencia extranjera. Por otra parte, la evidencia empírica sugiere que la apertura de la economía aumenta el crecimiento \cite{Wacziarg2008,Dollar2004}, por lo que existen incentivos para que los gobernantes reduzcan los aranceles y levanten otras barreras, ya sea unilateralmente, o multilateralmente a través de Tratados de Libre Comercio (TLC) con otros países.
+
+
+
+El tema que se aborda en esta memoria es el rol de los líderes nacionales en el desarrollo del comercio exterior de los países. El primer objetivo de este estudio es examinar si la labor de mandatarios afecta en alguna medida el crecimiento de variables tres variables macroeconómicas claves: importaciones, exportaciones y FDI. Posteriormente, bajo la hipótesis de que los líderes sí influyen, se plantea la cuestión central de esta investigación: ¿cómo afecta la personalidad de los líderes?...
+
+
+
 Trabajos recientes muestran que los líderes cumplen un rol importante afectando el crecimiento económico de los países (Besley et al., 2011; Jones y Olken, 2005). Además, un número creciente de estudios teóricos y empíricos sugieren que la calidad de las políticas es afectada por las características de los líderes que las implementan. La mayoría de estos estudios se ha centrado en características tales como el sexo (Gagliarducci y Paserman, 2011; Washington, 2008), la educación (Brollo y Troiano, 2014; Besley et al., 2011), o la edad (Alesina et al., 2015).
 
-¿Qué factores influyen en el desarrollo económico de los países? La literatura sobre crecimiento y desarrollo económico se ha enfocado tradicionalmente en factores característicos del país y políticas económicas mantenidas en el tiempo, tales como expectativas de vida y escolaridad, menor tasa de fertilidad, baja inflación, bajo gasto de gobierno, entre otros \cite{barro1996determinants}. 
-	
-Sin embargo, el diseño institucional, incluso en las democracias más avanzadas, a menudo facilita que presidentes y primeros ministros puedan dejar una impronta personal en decisiones y políticas de estado, y así influir significativamente en el progreso económico del país. En efecto, investigaciones recientes muestran que los líderes nacionales cumplen un rol importante afectando el crecimiento económico de sus países \cite{jones2004leaders,besley2011educated, besley2010political}. Esta  evidencia motiva la examinación de otras variables macroeconómicas que podrían ser directamente afectadas por las políticas implementadas por los líderes. 
-
-Un candidato ideal a considerar para tal estudio es el comercio internacional de un país, que se relaciona con variables macroeconómicas tales como importaciones, exportaciones e inversión extranjera directa (FDI, por \textit{Foreign Direct Investment} en inglés). Históricamente se ha sostenido la idea de que economías más abiertas al intercambio comercial tienen mejor desempeño económico \cite{Dollar2004, berg2003trade}. FDI también afecta positivamente el crecimiento \cite{Azman-Saini2010, Borensztein1998}.
 
 Diversos estudios sugieren que un grupo más amplio de características pueden afectar el desempeño de los jefes de estado y la forma en que estos toman decisiones. Características relativas al medio socioeconómico de la persona durante su infancia pueden influir en los logros alcanzados en su vida. Por ejemplo, Carneiro y Heckman (2002, 2003) muestran que el crecer en una familia acomodada es el factor más importante que explica el ingreso a la universidad. Además, existe evidencia que características relativas a la trayectoria y experiencia profesional afectan al desempeño de los líderes. Trabajos como (Gehlcach et al., 2010; Diermeier et al., 2005) sugieren que empresarios y ejecutivos que llegan ocupar un cargo político tienen un mejor desempeño que políticos de profesión. Otros  trabajos estudian el efecto en el desempeño de líderes con experiencia militar previa (Bernmelech y Frydan, 2014). Por último, un amplio conjunto de resultados muestran una relación entre características relativas a la personalidad y factores tales como orientación política (Gerber et al., 2010, 2011), comportamiento de congresistas (Crichlow, 2002; Dietrich et al, 2012; Ramey et al. 2014) y preferencias de política exterior (Schoen, 2007).
 
