--- a/puctesis_refs.bib
+++ b/puctesis_refs.bib
@@ -1119,3 +1119,51 @@
 	volume = {45},
 	year = {1998}
 }
+@book{Rodriguez2001,
+	abstract = {Do countries with lower policy-induced barriers to international trade grow faster, once other relevant country characteristics are controlled for? There exists a large empirical literature providing an affirmative answer to this question. We argue that methodological problems with the empirical strategies employed in this literature leave the results open to diverse interpretations. In many cases, the indicators of "openness" used by researchers are poor measures of trade barriers or are highly correlated with other sources of bad economic performance. In other cases, the methods used to ascertain the link between trade policy and growth have serious shortcomings. Papers that we review include Dollar (1992), Ben-David (1993), Sachs and Warner (1995), and Edwards (1998). We find little evidence that open trade policies--in the sense of lower tariff and non-tariff barriers to trade--are significantly associated with economic growth. (This abstract was borrowed from another version of this item.)},
+	author = {Rodriguez, Francisco and Rodrik, Dani},
+	booktitle = {NBER Macroeconomics Annual 2000, Volume 15},
+	doi = {doi:10.1086/654419},
+	file = {:C$\backslash$:/Users/Roberto/Google Drive/Memoria/Documentos/Papers/Trade/trade policy growth.pdf:pdf},
+	isbn = {08893365},
+	issn = {0889-3365; 0-262-02503-5},
+	mendeley-groups = {Economic growth},
+	number = {January},
+	pages = {261--338},
+	title = {{Trade Policy and Economic Growth: A Skeptic's Guide to the Cross-National Evidence}},
+	url = {http://ideas.repec.org/h/nbr/nberch/11058.html},
+	volume = {15},
+	year = {2001}
+}
+@article{Wacziarg2008,
+	abstract = {A new data set of on openness indicators and trade liberalization dates allows the 1995 Sachs and Warner study on the relationship between trade openness and economic growth to be extended to the 1990s. New evidence on the time paths of economic growth, physical capital investment, and openness around episodes of trade policy liberalization is also presented. Analysis based on the new data set suggests that over the 1950--98 period, countries that liberalized their trade regimes experienced average annual growth rates that were about 1.5 percentage points higher than before liberalization. Postliberalization investment rates rose 1.5--2.0 percentage points, confirming past findings that liberalization fosters growth in part through its effect on physical capital accumulation. Liberalization raised the average trade to GDP ratio by roughly 5 percentage points, suggesting that trade policy liberalization did indeed raise the actual level of openness of liberalizers. However, these average effects mask large differences across countries. Copyright The Author 2008. Published by Oxford University Press on behalf of the International Bank for Reconstruction and Development / the world bank . All rights reserved. For permissions, please e-mail: journals.permissions@oxfordjournals.org, Oxford University Press.},
+	author = {Wacziarg, Romain and Welch, Karen Horn},
+	doi = {10.1093/wber/lhn007},
+	file = {:C$\backslash$:/Users/Roberto/Google Drive/Memoria/Documentos/Papers/Trade/World Bank Econ Rev-2008-Wacziarg-187-231.pdf:pdf},
+	isbn = {02586770},
+	issn = {02586770},
+	journal = {World Bank Economic Review},
+	mendeley-groups = {Economic growth},
+	number = {2},
+	pages = {187--231},
+	pmid = {1},
+	title = {{Trade liberalization and growth: New evidence}},
+	volume = {22},
+	year = {2008}
+}
+@article{Yanikkaya2003,
+	abstract = {This paper demonstrates that trade liberalization does not have a simple and straightforward relationship with growth using a large number of openness measures for a cross section of countries over the last three decades. We use two groups of trade openness measures. The regression results for numerous trade intensity ratios are mostly consistent with the existing literature. However, contrary to the conventional view on the growth effects of trade barriers, our estimation results show that trade barriers are positively and, in most specifications, significantly associated with growth, especially for developing countries and they are consistent with the findings of theoretical growth and development literature. ?? 2003 Elsevier Science B.V. All rights reserved.},
+	author = {Yanikkaya, Halit},
+	doi = {10.1016/S0304-3878(03)00068-3},
+	file = {:C$\backslash$:/Users/Roberto/Google Drive/Memoria/Documentos/Papers/Trade/trade barriers 2.pdf:pdf},
+	isbn = {0304-3878},
+	issn = {03043878},
+	journal = {Journal of Development Economics},
+	keywords = {Growth,Openness,Trade barriers,Trade volumes},
+	mendeley-groups = {Economic growth},
+	number = {1},
+	pages = {57--89},
+	title = {{Trade openness and economic growth: A cross-country empirical investigation}},
+	volume = {72},
+	year = {2003}
+}
